# clay_port

./: .gitignore  LICENSE  Readme.md  clay_impl.c  clay_include.h  clay_upstream.patch  clayculator.c  main.c  meson.build  meson_options.txt  pkg_dreamcast_cdi.sh  pkg_psp.sh  raylib_main.c  template.c
glad/include/glad/: glad.h
glad/src/: glad.c
renderers/gl_legacy/: clay_renderer.h  clay_renderer_gl_legacy.c  clay_types.h
renderers/gu/: clay_renderer.h  clay_renderer_gu.c  clay_types.h
renderers/pvr/: clay_renderer.h  clay_renderer_pvr.c  clay_types.h  draw_pvr.c  draw_pvr.h  font_bmf.c  font_prototypes.h  pvr_texture.c  simple_texture_allocator.c  simple_texture_allocator.h
subprojects/: cglm.wrap  libintrafont.wrap
subprojects/glad/: meson.build
